# agentic_rag

./: .gitignore  main.py  pyproject.toml
backend/agent/: agents.py  task.py
backend/data_preprocessor/: data_preprocessing.py
backend/embeddings/: similarity_search.py
backend/llm/: llm.py
