[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]>=0.201.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.117.1",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.30",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
]
